+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.2 Alpha 1?
=================================

*Release date: XX-XXX-XXX*

Core and Builtins
-----------------

- Issue #6690: Optimize the bytecode for expressions such as `x in {1, 2, 3}`,
  where the right hand operand is a set of constants, by turning the set into
  a frozenset and pre-building it as a constant.  The comparison operation
  is made against the constant instead of building a new set each time it is
  executed (a similar optimization already existed which turned a list of
  constants into a pre-built tuple).  Patch and additional tests by Dave
  Malcolm.

- Issue #7622: Improve the split(), rsplit(), splitlines() and replace()
  methods of bytes, bytearray and unicode objects by using a common
  implementation based on stringlib's fast search.  Patch by Florent Xicluna.

- Issue #7632: Fix various str -> float conversion bugs present in 2.7
  alpha 2, including: (1) a serious 'wrong output' bug that could
  occur for long (> 40 digit) input strings, (2) a crash in dtoa.c
  that occurred in debug builds when parsing certain long numeric
  strings corresponding to subnormal values, and (3) a number of flaws
  that could lead to incorrectly rounded results.

- The __complex__ method is now looked up on the class of instances to make it
  consistent with other special methods.

- Issue #7462: Implement the stringlib fast search algorithm for the `rfind`,
  `rindex`, `rsplit` and `rpartition` methods.  Patch by Florent Xicluna.

- Issue #7604: Deleting an unset slotted attribute did not raise an
  AttributeError.

- Issue #7534: Fix handling of IEEE specials (infinities, nans,
  negative zero) in ** operator.  The behaviour now conforms to that
  described in C99 Annex F.

- Issue #1811: improve accuracy and cross-platform consistency for
  true division of integers: the result of a/b is now correctly